--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,95 @@
 * {
+    box-sizing: border-box;
+}
+
+body {
     margin: 0;
     padding: 0;
 }
+
+.navbar {
+    background-color: grey;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    height: 100%;
+    font-size: 2rem;
+    margin: .5rem;
+    padding: .5rem;
+}
+
+.navbar-links ul {
+    margin: 0;
+    display: flex;
+}
+
+.navbar-links ul li {
+    list-style: none;
+}
+
+.navbar-links li a {
+    font-size: 1.15rem;
+    padding: 1.75rem;
+    display: block;
+}
+
+.navbar-links li:hover {
+    background-color: azure;
+}
+
+.toggle-button {
+    position: absolute;
+    display: none;
+    top: 1.5rem;
+    right: 2rem;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+
+}
+
+@media (max-width: 750px) {
+    .toggle-button {
+        display: flex;
+    }
+
+    .navbar-links {
+        width: 100%;
+        display: none;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links li {
+        text-align: center;
+        margin-left: -50px;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+}
+
+
 
 .pic {  
     padding: 20px;
@@ -9,53 +97,6 @@
     margin-left: auto;
     margin-right: auto;
     width: 30%;
-}
-
-.header {
-    background-color: grey;
-    height: 80px;
-    display: block;
-}
-
-.inner-header {
-    width: 1000px;
-    height: 100%;
-    margin: 0 auto;
-}
-
-.logo-container {
-    height: 100%;
-    display: table;
-    float: left;
-}
-
-.logo-container h1{
-    color: white;
-    height: 100%;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.navigation {
-    float: right;
-    height: 100%;
-}
-
-.navigation a{
-    height: 100%;
-    display: table;
-    float: left;
-    padding: 0px 20px;
-}
-
-.navigation a li{
-    display: table-cell;
-    vertical-align: middle;
-    color: white;
-}
-
-.navigation a:hover {
-    background-color: darkgrey;
 }
 
 section {
