added projects section

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     font-size: 2rem;
     margin: .5rem;
     padding: .5rem;
+    color: white;
 }
 
 .navbar-links ul {
@@ -34,10 +35,11 @@ body {
     font-size: 1.15rem;
     padding: 1.75rem;
     display: block;
+    color: white;
 }
 
 .navbar-links li:hover {
-    background-color: azure;
+    background-color: darkgray;
 }
 
 .toggle-button {
@@ -89,32 +91,61 @@ body {
     }
 }
 
-
-
-.pic {  
-    padding: 20px;
+.me {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+a {
+    color: black;
+}
+
+#tictactoe {
+    width: 100%;
+    border-style: solid;
+    border-radius: 10%;
+}
+
+#website {
+    width: 90%;
+    border-style: solid;
+    border-radius: 5%;
+}
+
+p {
+    font-size: 15pt;
+    color: rgb(100, 100, 100);
 }
 
 section {
-    padding: 30px;
-    margin-right: 20%;
-    margin-left: 20%;
+    margin-left: 4rem;
+    margin-right: 4rem;
 }
 
 h2 {
+    margin-left: 5%;
+    margin-right: 5%;
     font-size: 20pt;
     border-bottom: 2px solid;
+}
+
+article {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+}
+
+article div {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
 }
 
 a:hover, a:visited, a:link, a:active
 {
     text-decoration: none;
-}
-
-p {
-    font-size: 15pt;
 }
